--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
     "core-js": "^3.22.0",
+    "cors": "^2.8.5",
     "css-loader": "^6.7.1",
     "csurf": "^1.11.0",
     "dotenv": "^16.0.0",
